# gs_interfaces

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_ros2_messages.py  package.xml
msg/: ControlPanelSwitches.msg  LoadCell.msg  LoadCells.msg  LoadCellsCalibrate.msg  LoadCellsParams.msg  LoadCellsTare.msg  Power.msg  PowerTanking.msg  Pressure.msg  RadioStatus.msg  RadiolinkTelemetry.msg  RocketStatus.msg  RocketTelemetry.msg  SimbaAck.msg  SimbaActuator.msg  SimbaAltitudeOrientation.msg  SimbaComputerTemperature.msg  SimbaComputerUsage.msg  SimbaComputersTelemetry.msg  SimbaGps.msg  SimbaHeartbeat.msg  SimbaImu.msg  SimbaMaxAltitude.msg  SimbaRocketHeartbeat.msg  SimbaTankPressure.msg  SimbaTankSensors.msg  SimbaTankTemperature.msg  TankingAbort.msg  TankingActuators.msg  TankingCmds.msg  TankingCommands.msg  TankingControl.msg  TankingSensors.msg  Telemetry433.msg  Temperature.msg  UartStatistics.msg  ValveSensors.msg  ValveServos.msg  WirelessTelemetry.msg
msg/radio_msgs/: Telemetry433.msg
msg/rocket_msgs/: RocketStatus.msg  RocketTelemetry.msg
msg/tanking_msgs/: LoadCell.msg  LoadCells.msg  TankingCmds.msg  TankingControl.msg  Tensobelki.msg  ValveSensors.msg  ValveServos.msg
msg/tankowanie/: LoadCell.msg  LoadCellStamped.msg
srv/: FixGPSPosition.srv
